# neuro-symbolic-legal-reasoning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
code/: README.md
code/evaluation/: README.md  predicate_correctness.py  reasoning_correctness.py  source_correctness.py
code/parser/: README.md  memory.py  prolog_validation.py  prompts.py  semantic_parser.py
code/utils/: README.md  convert_json_to_txt.py
data/: README.md
data/cases/: case_01.json  case_02.json  case_03.json  case_04.json  case_05.json  case_06.json  case_07.json  case_08.json  case_09.json  case_10.json  case_11.json  case_12.json  case_13.json  case_14.json  case_15.json  case_16.json  case_17.json  case_18.json  case_19.json  case_20.json  case_21.json  case_22.json  case_xx_example.json  gold_case_01.txt  gold_case_02.txt  gold_case_03.txt  gold_case_04.txt  gold_case_05.txt  gold_case_06.txt  gold_case_07.txt  gold_case_08.txt  gold_case_09.txt  gold_case_10.txt  gold_case_11.txt  gold_case_12.txt  gold_case_13.txt  gold_case_14.txt  gold_case_15.txt  gold_case_16.txt  gold_case_17.txt  (+7 more)
data/parsed_cases_gold/: gold_case_001.pl  gold_case_001.txt  gold_case_002.pl  gold_case_002.txt  gold_case_003.txt  gold_case_004.pl  gold_case_004.txt  gold_case_005.pl  gold_case_006.pl  gold_case_007.pl  gold_case_007.txt  gold_case_008.pl  gold_case_009.pl  gold_case_010.txt  gold_case_011.pl  gold_case_012.txt  gold_case_013.txt  gold_case_014.txt  gold_case_015.pl  gold_case_015.txt  (+8 more)
results/: README.md  models_comparison.md
(+262 files in other folders)
