[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-symbolic-legal-reasoning"
version = "0.1.0"
description = "Neuro-symbolic legal reasoning with constrained LLM parsing and Prolog evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark",
    "openai",
    "python-dotenv",
    "PyYAML",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["neuro_symbolic_legal_reasoning*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"src/neuro_symbolic_legal_reasoning/__init__.py" = ["F401"]
"src/neuro_symbolic_legal_reasoning/parser/__init__.py" = ["F401"]
"src/neuro_symbolic_legal_reasoning/evaluation/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
